# gimp-pixel-art-utils

./: CMakeLists.txt  README.md  changelog.txt  make-release.bat
animation-preview/: animation-preview.py
boilerplate/gtk-template/: gtk-template.py
boilerplate/template/: template.py
docs/: ReleaseChecklist.md
layer-group-animation-preview/: layer-group-animation-preview.py
make-tiles/: make-tiles.py
other/template/: template.py
pixel-art-exporter/: pixel-art-exporter.py
plug-ins/animation-preview/: animation-preview.py
plug-ins/load-as-tiles/: load-as-tiles.py
plug-ins/spritesheetize/: spritesheetize.py  template.py
plug-ins/tile-preview/: tile-preview.py
spritesheetize/: spritesheetize.py
testdata/: animations-test.xcf  tileset.png.clip  tilesetize-test.xcf
tile-preview/: tile-preview.py
tilesetize/: tilesetize.py
